--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-task:scss-compile": "node-sass-chokidar --source-map true src/scss/ -o assets/kbl-css",
+    "build-task:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d assets/kbl-css",
+    "sass:build": "npm-run-all -p build-task:*",
+    "sass:watch": "chokidar 'src/scss/**/*.scss' -c 'npm run sass:build'",
+    "dev-scss": "npm-run-all -p sass:*",
+    "dev-js": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,14 +22,19 @@
   },
   "homepage": "https://github.com/suyash07/bioinformatics#readme",
   "dependencies": {
+    "autoprefixer": "^9.7.6",
+    "chokidar-cli": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "https": "^1.0.0",
     "node-sass": "^4.14.1",
+    "node-sass-chokidar": "^1.4.0",
     "node-sass-middleware": "^0.11.0",
+    "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.1",
     "nunjucks-setasync": "^1.0.4",
     "path": "^0.12.7",
+    "postcss-cli": "^7.1.1",
     "sass": "^1.26.5"
   }
 }
