--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "sass:watch": "chokidar 'src/scss/**/*.scss' -c 'npm run sass:build'",
     "sass:importer": "node src/importer.js",
     "dev-scss": "npm-run-all -p sass:*",
-    "dev-js": "nodemon src/index.js"
+    "dev-js": "nodemon src/index.js",
+    "production": "NODE_ENV=test node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "chokidar-cli": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "https": "^1.0.0",
     "node-sass": "^4.14.1",
     "node-sass-chokidar": "^1.4.0",
