--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-task:scss-compile": "node-sass-chokidar --source-map true src/scss/ -o assets/kbl-css",
     "build-task:autoprefixer": "postcss assets/kbl-css/*.css --use autoprefixer -d assets/kbl-css",
     "sass:build": "npm-run-all -p build-task:*",
-    "sass:watch": "chokidar 'src/scss/**/*.scss' -c 'npm run sass:build'",
+    "sass:watch": "chokidar 'src/**/*.scss' -c 'npm run sass:build'",
     "sass:importer": "node src/importer.js",
     "dev-scss": "npm-run-all -p sass:*",
     "dev-js": "nodemon src/index.js",
