--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
+    "feather-icons": "^4.28.0",
     "https": "^1.0.0",
     "node-sass": "^4.14.1",
     "node-sass-chokidar": "^1.4.0",
