--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev-scss": "npm-run-all -p sass:*",
     "dev-js": "nodemon src/index.js",
     "update": "git pull origin master",
-    "production": "NODE_ENV=test node src/index.js"
+    "production": "NODE_ENV=test node src/index.js",
+    "docker:build": "docker build -t testing/bioinformatics .",
+    "docker:test": "docker run -p 3000:3000 -d testing/bioinformatics"
   },
   "repository": {
     "type": "git",
@@ -25,21 +27,22 @@
   },
   "homepage": "https://github.com/MusicDev33/bioinformatics#readme",
   "dependencies": {
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.1.0",
     "chokidar-cli": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "feather-icons": "^4.28.0",
     "https": "^1.0.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "node-sass-chokidar": "^1.5.0",
     "node-sass-middleware": "^0.11.0",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.2",
     "nunjucks-setasync": "^1.0.4",
     "path": "^0.12.7",
-    "postcss-cli": "^7.1.2",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.0",
     "sass": "^1.30.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
