--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "setsid sh -c 'npm run dev-scss & npm run dev-js' &",
-    "build-task:scss-compile": "node-sass-chokidar --source-map true --output-style compressed src/scss/ -o assets/kbl-css",
+    "build-task:scss-compile": "node-sass --source-map true --output-style compressed src/scss -o assets/kbl-css",
     "build-task:autoprefixer": "postcss assets/kbl-css/*.css --use autoprefixer -d assets/kbl-css",
     "sass:build": "npm-run-all -p build-task:*",
     "sass:watch": "chokidar 'src/**/*.scss' -c 'npm run sass:build'",
@@ -28,24 +28,24 @@
   },
   "homepage": "https://github.com/MusicDev33/bioinformatics#readme",
   "dependencies": {
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^10.2.6",
     "chokidar-cli": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "feather-icons": "^4.28.0",
     "https": "^1.0.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.0",
     "node-sass-chokidar": "^1.5.0",
     "node-sass-middleware": "^0.11.0",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
     "nunjucks-setasync": "^1.0.4",
     "path": "^0.12.7",
-    "postcss": "^8.2.8",
+    "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
-    "sass": "^1.32.8",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "sass": "^1.34.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
