--- a/package.json
+++ b/package.json
@@ -28,22 +28,20 @@
   },
   "homepage": "https://github.com/MusicDev33/bioinformatics#readme",
   "dependencies": {
-    "autoprefixer": "^10.2.6",
-    "chokidar-cli": "^2.1.0",
+    "autoprefixer": "^10.3.1",
+    "chokidar-cli": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.6",
+    "express-rate-limit": "^5.3.0",
     "feather-icons": "^4.28.0",
     "https": "^1.0.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
     "nunjucks-setasync": "^1.0.4",
     "path": "^0.12.7",
-    "postcss": "^8.3.0",
+    "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
-    "sass": "^1.34.1",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "sass": "^1.37.5"
   }
 }
